# AutoHWFormer

./: .gitignore  README.md  ZigZag_space.py  args.py  evaluate_subnets.py  evolution_subnet.py  hardware_generator.py  logger.py  profile_performance.py  pyproject.toml  references.py  train_supernet.py  utils.py
config/: edge_tpu_search.yaml  supernet-B.yaml  supernet-B1.yaml  supernet-S.yaml
datasets/: autoformer_datasets.py  folder.py  imagenet.py
hardware/: stream_hardware_generator.py  zigzag_hardware_generator.py
inputs/zigzag/hardware/: edge_tpu_like_v2.yaml
libAutoFormer/: config.py  samplers.py  subImageNet.py
model/: supernet_transformer.py  transformer_onnx.py  utils.py
model/module/: Linear_super.py  embedding_super.py  layernorm_super.py  multihead_super.py  qkv_super.py
slurm/: evo.sh  generate_space.sh  profile_performance.sh  test_training.sh
slurm/evo/: evo1.sh  evo2.sh  evo3.sh  evo4.sh  evo5.sh  evo6.sh
