[project]
name = "autohwformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "gdown>=5.2.0",
    "onnxscript>=0.2.2",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "python-hostlist>=2.2.1",
    "scikit-image>=0.25.2",
    "timm>=1.0.15",
    "torch==2.5.0",
    "wandb>=0.19.6",
    "zigzag-dse>=3.8.1",
]
